...
  'biometric_prompt_root',
  'biometric_unlock_authenticate_cta',
  'biometric_unlock_prompt',
  'bootstrap_error',
  'bootstrap_error_retry_cta',
  'cancel_request_close_cta',
  'cancel_request_confirm_cta',
  'cancel_request_error',
  'cancel_request_free_note',
  'cancel_request_keep_cta',
  'cancel_request_sheet',
  'cancel_request_unavailable',
  'cancellation_back',
  'cancellation_error_note',
  'cancellation_exit_cta',
  'cancellation_root',
  'cancellation_sheet_done_cta',
...
  'dispute_evidence_error',
  'dispute_evidence_loading',
  'dispute_photos',
  'dispute_photos_add_cta',
  'dispute_photos_error',
  'dispute_reason',
  'dispute_root',
  'dispute_status_back',
  'dispute_status_error',
  'dispute_status_evidence_empty',
  'dispute_status_evidence_partial',
  'dispute_status_evidence_summary',
  'dispute_status_history',
...
  'notifications_loading',
  'notifications_markread_error',
  'notifications_refresh_error',
  'notifications_retry_cta',
  'notifications_root',
  'obs_overlay_bubble',
  'offer_accept_cancel_cta',
  'offer_accept_confirm_cta',
  'offer_accept_error',
  'offer_accept_jeeber_name',
  'offer_accept_other_offers_note',
  'offer_accept_price_label',
  'offer_accept_sheet',
  'offer_accepted_banner',
  'offer_accepted_banner_text',
  'offer_accepted_dismiss_cta',
  'offer_accepted_track_cta',
  'offer_card_no_ratings',
  'offer_composer_close_cta',
...
  'offer_review_empty_title',
  'offer_review_error_banner',
  'offer_review_error_dismiss_cta',
  'offer_review_exit_cta',
  'offer_review_expired_state',
  'offer_review_expired_title',
  'offer_review_list_root',
  'offer_review_only_one_note',
  'offer_review_retry_cta',
  'offer_review_sort_best',
  'offer_review_sort_price',
  'offer_review_sort_rating',
  'offer_review_waiting_window_chip',
...
  'order_history_refresh_failed_snack',
  'order_history_retry_cta',
  'order_history_root',
  'order_history_sheet_apply_cta',
  'order_history_sheet_clear_cta',
  'order_summary_back',
  'order_summary_cash_label',
  'order_summary_empty',
  'order_summary_error',
  'order_summary_eta',
  'order_summary_item',
  'order_summary_jeeber_name',
  'order_summary_loading',
  'order_summary_partial',
  'order_summary_pinned',
  'order_summary_price',
  'order_summary_refresh_failed',
  'order_summary_retry_cta',
  'order_summary_root',
  'order_summary_status',
  'order_summary_tier',
  'order_summary_track',
  'orders_create_request_button',
  'orders_filter_apply',
  'orders_filter_clear',
  'orders_filter_open',
  'orders_filter_pill_bucket',
  'orders_filter_pill_status',
  'orders_home_replies_tab',
...
  'prohibited_item_report_photo_chip',
  'prohibited_item_report_photo_error',
  'prohibited_item_report_root',
  'prohibited_item_report_submit',
  'rating_root',
  'rating_skip_cta',
  'rating_submit_cta',
  'rating_submit_error',
  'receipt_cash_to_jeeber_label',
  'receipt_confirm_cta',
  'receipt_confirm_error',
  'receipt_confirm_error_dismiss_cta',
  'receipt_load_error',
  'receipt_loading',
  'receipt_not_yet_cta',
  'receipt_prompt',
  'receipt_proof_photo',
  'receipt_proof_viewer_close',
  'receipt_proof_viewer_root',
  'receipt_proof_zoom_cta',
  'receipt_refresh_failed',
  'register_trust_note',
  'registration_root',
...
  'tracking_cancelled_home_cta',
  'tracking_cancelled_state',
  'tracking_courier_card',
  'tracking_deadline_label',
  'tracking_delivered_receipt_cta',
  'tracking_delivered_state',
  'tracking_dispute_cta',
  'tracking_distance_label',
  'tracking_error_state',
  'tracking_eta_label',
  'tracking_expired_home_cta',
  'tracking_expired_state',
  'tracking_handover_code_row',
  'tracking_loading',
  'tracking_map',
  'tracking_noshow_cta',
  'tracking_noshow_keep_cta',
  'tracking_noshow_reassign_cta',
  'tracking_noshow_rebroadcast_cta',
  'tracking_noshow_sheet',
  'tracking_on_the_way',
  'tracking_position_notice',
  'tracking_progress_stepper',
  'tracking_refresh_failed',
  'tracking_root',
  'tracking_status_panel',
  'tracking_stepper',
  'tracking_stream_retry_cta',
  'tracking_stream_unavailable',
  'tracking_under_review_state',
  'txn_detail',
  'txn_detail_amount',
  'txn_detail_back',
...
  'voice_request_send_button',
  'voice_request_timer',
  'voice_request_transient_error',
  'voice_request_type_button',
  'voice_request_upload_error_state',
  'waiting_back',
  'waiting_cancel_cta',
  'waiting_countdown',
  'waiting_error_headline',
  'waiting_error_state',
  'waiting_exit_cta',
  'waiting_loading_state',
  'waiting_no_coverage_state',
  'waiting_notified_count',
  'waiting_offer_count_unavailable',
  'waiting_refresh_failed_note',
  'waiting_request_description',
  'waiting_retarget_cta',
  'waiting_retry_cta',
  'waiting_review_offers_cta',
...
  'order-detail-chat': 'order-detail-conversation',
  'order-detail-otp': 'order-detail-verification',
  'order_chat_composer_send': 'order_conversation_composer_send',
  'otp_handover_code_display': 'verification_handover_code_display',
  'customer_profile_addresses_row': 'customer_profile_saved_places_row',
  'customer_profile_password_row': 'customer_profile_security_row',
  'order_summary_open_chat': 'order_summary_open_conversation',
  'active_delivery_gps_permission_banner':
      'active_delivery_place_permission_banner',
  'active_delivery_gps_permission_cta': 'active_delivery_place_permission_cta',
  'address_detail_form_root': 'place_detail_form_root',
  'address_form_back': 'place_form_back',
  'address_form_edit_pin_cta': 'place_form_edit_pin_cta',
...
  'location_select_saved_addresses_error': 'place_select_saved_places_error',
  'location_select_saved_addresses_row': 'place_select_saved_places_row',
  'mark_delivered_open_chat_cta': 'mark_delivered_open_conversation_cta',
  'mark_delivered_otp_submit': 'mark_delivered_verification_submit',
  'order_chat_cash_label': 'order_conversation_cash_label',
  'order_chat_open_dispute': 'order_conversation_open_dispute',
  'order_chat_pinned_summary': 'order_conversation_pinned_summary',
  'order_chat_quick_reply_door': 'order_conversation_quick_reply_door',
  'order_chat_quick_reply_home': 'order_conversation_quick_reply_home',
  'order_chat_quick_reply_row': 'order_conversation_quick_reply_row',
  'order_chat_quick_reply_thanks': 'order_conversation_quick_reply_thanks',
  'order_chat_request_description': 'order_conversation_request_description',
  'order_chat_root': 'order_conversation_root',
  'order_chat_summary_expand': 'order_conversation_summary_expand',
  'order_chat_summary_reference': 'order_conversation_summary_reference',
  'order_chat_track_cta': 'order_conversation_track_cta',
  'order_chat_view_summary_link': 'order_conversation_view_summary_link',
  'otp_done_rate_now': 'verification_done_rate_now',
  'otp_handover_arrival': 'verification_handover_arrival',
  'otp_handover_back': 'verification_handover_back',
  'otp_handover_dispute': 'verification_handover_dispute',
  'otp_handover_error': 'verification_handover_error',
  'otp_handover_loading': 'verification_handover_loading',
...
